--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 JWT_SECRET="123123213"
 MONGO_URI="mongodb+srv://ansh:xjppzROGW0Xg8cGv@work.5omxrej.mongodb.net/?retryWrites=true&w=majority"
+
+FROM_NAME="LearnToday"
+SMTP_SERVICE="gmail"
+SMTP_EMAIL="dudejah69@gmail.com"
+SMTP_PASSWORD="pytw jzhb skwi bcgm"
+
+URL="http://localhost:5001"
