change password feature reaady

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ SMTP_EMAIL="dudejah69@gmail.com"
 SMTP_PASSWORD="pytw jzhb skwi bcgm"
 
 URL="http://localhost:5001"
+CLIENT_URL="http://localhost:3000"
