--- a/backend/.env
+++ b/backend/.env
@@ -6,5 +6,5 @@ SMTP_SERVICE="gmail"
 SMTP_EMAIL="dudejah69@gmail.com"
 SMTP_PASSWORD="pytw jzhb skwi bcgm"
 
-URL="http://localhost:5001"
-CLIENT_URL="http://localhost:3000"
+URL="https://lms-seven-delta.vercel.app"
+CLIENT_URL="https://lms-frontend-orcin.vercel.app"
