--- a/backend/.env
+++ b/backend/.env
@@ -7,4 +7,4 @@ SMTP_EMAIL="dudejah69@gmail.com"
 SMTP_PASSWORD="pytw jzhb skwi bcgm"
 
 URL="https://lms-seven-delta.vercel.app"
-CLIENT_URL="https://lms-frontend-orcin.vercel.app"
+CLIENT_URL="https://lms-frontend-delta.vercel.app/"
