--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,11 +9,7 @@
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "/",
-			"methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
-			"headers": {
-				"Access-Control-Allow-Origin": "*"
-			}
+			"dest": "/"
 		}
 	]
 }
