--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
 		"mongoose": "^8.0.3",
 		"nodemailer": "^6.9.8",
 		"nodemon": "^3.0.2",
-		"node": "latest"
+		"node": "latest",
+		"cors": "latest"
 	}
 }
