--- a/backend/.env
+++ b/backend/.env
@@ -6,5 +6,5 @@ SMTP_SERVICE="gmail"
 SMTP_EMAIL="dudejah69@gmail.com"
 SMTP_PASSWORD="pytw jzhb skwi bcgm"
 
-URL="https://lms-seven-delta.vercel.app"
-CLIENT_URL="https://lms-frontend-delta.vercel.app/"
+URL="https://lms-sand-kappa.vercel.app"
+CLIENT_URL="https://lms-frontend-delta.vercel.app"
