--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,7 +14,10 @@
 			"headers": {
 				"Access-Control-Allow-Origin": "*",
 				"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-				"Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Origin, Authorization"
+				"Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Origin, Authorization",
+				"Access-Control-Allow-Credentials": "true",
+				"Access-Control-Max-Age": "86400",
+				"Access-Control-Expose-Headers": "X-Total-Count, Link"
 			}
 		}
 	]
