--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
 	"routes": [
 		{
 			"src": "/api/(.*)",
-			"dest": "/",
+			"dest": "/index.js",
 			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 			"headers": {
 				"Access-Control-Allow-Origin": "*",
