--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,46 +1,16 @@
 {
-	"version": 2,
-	"builds": [
-		{
-			"src": "./index.js",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/api/(.*)",
-			"dest": "/index.js",
-			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-			"headers": {
-				"Access-Control-Allow-Origin": "*",
-				"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-				"Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Origin, Authorization",
-				"Access-Control-Allow-Credentials": "true"
-			}
-		},
-		{
-			"src": "/api/auth",
-			"dest": "/routes/auth/route"
-		},
-		{
-			"src": "/api/student",
-			"dest": "/routes/student/route"
-		},
-		{
-			"src": "/api/teacher",
-			"dest": "/routes/tecaher/route"
-		},
-		{
-			"src": "/api/course",
-			"dest": "/routes/course/route"
-		},
-		{
-			"src": "/api/admin",
-			"dest": "/routes/admin/route"
-		},
-		{
-			"src": "/api/home",
-			"dest": "/routes/public/route"
-		}
-	]
+   "version": 2,
+   "name": "lms",
+   "builds": [
+      {
+         "src": "server.js",
+         "use": "@vercel/node"
+      }
+   ],
+   "routes": [
+      {
+         "src": "/(.*)",
+         "dest": "server.js"
+      }
+   ]
 }
