--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
+		"cors": "latest",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.3",
-		"nodemailer": "^6.9.8",
-		"nodemon": "^3.0.2",
 		"node": "latest",
-		"cors": "latest"
+		"nodemailer": "^6.9.8",
+		"nodemon": "^3.0.2"
 	}
 }
