--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 JWT_SECRET="123123213"
-MONGO_URI="mongodb+srv://tripat3k2:Wednesdayandy%40393@job-posting.rvfgi0t.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://ansh:xjppzROGW0Xg8cGv@work.5omxrej.mongodb.net/?retryWrites=true&w=majority"
 
 FROM_NAME="LearnToday"
 SMTP_SERVICE="gmail"
