--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,21 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js"
+		"start": "node index.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"bunyan": "^1.8.15",
+		"compression": "^1.7.4",
+		"cors": "latest",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.3",
-		"nodemailer": "^6.9.8",
-		"nodemon": "^3.0.2",
 		"node": "latest",
-		"cors": "latest"
+		"nodemailer": "^6.9.8",
+		"nodemon": "^3.0.2"
 	}
 }
