--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
 		"bunyan": "^1.8.15",
 		"compression": "^1.7.4",
 		"cors": "latest",
