--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,13 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "node index.js",
+		"dev" : "nodemon index.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
-		"bunyan": "^1.8.15",
-		"compression": "^1.7.4",
 		"cors": "latest",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
