--- a/backend/.env
+++ b/backend/.env
@@ -6,5 +6,5 @@ SMTP_SERVICE="gmail"
 SMTP_EMAIL="dudejah69@gmail.com"
 SMTP_PASSWORD="pytw jzhb skwi bcgm"
 
-URL="https://lms-sand-kappa.vercel.app"
+URL="https://lms-black-two.vercel.app/"
 CLIENT_URL="https://lms-frontend-delta.vercel.app"
